# openai-py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  flake.nix  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  ci.yaml  dependabot.yml
.github/workflows/: ci.yaml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: apitest.py  chathistory.py  langchaintest.py  tools.py  v1test.py
im_openai/: __init__.py  background.py  client.py  langchain_patch.py  langchain_util.py  patch.py  template.py  test_langchain_util.py
im_openai/langchain/: __init__.py  callbacks.py  patch.py  util.py
im_openai/pii/: __init__.py  name_recognizer.py  nlp.py  redactor.py  street_address_recognizer.py
im_openai/pii/data/: names.json
langchain-examples/: conversational-qa.py  math-qa.py  qa-evaluation.py  summarize-docs.py
libretto_openai/: __init__.py  client.py  completions.py  completions_impl.py  libretto_client.py  patch.py  session.py  template.py  types.py
libretto_openai/langchain/: __init__.py  callbacks.py  util.py
libretto_openai/pii/: name_recognizer.py  nlp.py  redactor.py
libretto_openai/v1/: __init__.py  client.py  completions.py  completions_impl.py  types.py
tests/: __init__.py  test_client.py  test_im_openai.py  test_langchain.py  test_langchain_util.py  test_libretto_client.py  test_patch.py  test_template.py
tests/pii/: test_redactor.py
