[tool.setuptools.package-data]
"libretto-openai" = ["py.typed"]

[tool.black]
line-length = 100
target_version = ['py311']
[tool.isort]
profile = "black"

[tool.poetry]
name = "libretto-openai"
version = "1.1.2"
description = "Wrapper library for openai to send events to Libretto"
authors = ["Alec Flett <alecf@thegp.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
aiohttp = "^3.8.5"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
pytest-asyncio = ">=0.21.1,<0.26.0"
pre-commit = ">=3.3.3,<5.0.0"
black = ">=23.7,<26.0"
flake8 = ">=6.1,<8.0"
faiss-cpu = "^1.7.4"
Sphinx = ">=7.2.2,<9.0.0"
tiktoken = ">=0.4,<0.10"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
